<resources>
    <string name="app_name">Quikcart</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_cart">Cart</string>
    <string name="title_orders">Orders</string>
    <string name="item_photo">item_photo</string>
    <string name="rupee_symbol">₹</string>
    <string name="get_it_by_thursday_march_18">Get it by <b>Thursday, May 18</b></string>
    <string name="item_name_format">₹ %s</string>
    <string name="mrp_format">MRP : ₹ %s</string>
    <string name="save_format">Save ₹ %s</string>
    <string name="delivery_format">Delivery in %s</string>
    <string name="size_text"><b>Size</b> : 1kg</string>
    <string name="subtotal_format">Subtotal (%d items): ₹ %d</string>
    <string name="item_address_format">Shipping to: <b>%s</b></string>
    <string name="item_delivery_time_format">Guaranteed delivery: <b>%s</b></string>
    <string name="item_bill_amount_format">Items:              ₹ %s\nDelivery:           ₹ %s\nTotal:              ₹ %s</string>
    <string name="item_save_amount_format">Your Savings: ₹ %s</string>
    <string name="item_payment_method_format">Payment Method: %s</string>
    <string name="item_order_placed_time_format">Order Placed: %s</string>
    <string name="item_order_status_format">STATUS : %s</string>
    <string name="item_order_delivered_or_cancelled_time_format">Order Delivered/Cancelled: %s</string>
    <string name="user">User</string>
    <string name="api_key">vmhgk2k88b8n</string>
    <string name="about_speech">We are happy to announce the GREAT Team because of which this app has become a possibility in a really short period of 2 months (With exams haunting every month 😬). \n\nI would like to congratulate each and every team member for their hard work and dedication, and i would like to thank Saurabh sir for assigning such a great and diverse team 🙌.\n\n-Anant Kataria👨‍🎓</string>
</resources>