<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.savage9ishere.tiwarimart.main_flow.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.savage9ishere.tiwarimart.main_flow.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_navigation_cart_to_checkoutFragment2"
            app:destination="@id/checkoutFragment2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.savage9ishere.tiwarimart.main_flow.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/checkoutFragment2"
        android:name="com.savage9ishere.tiwarimart.fragment_container.checkout.CheckoutFragment"
        android:label="CheckoutFragment" />
</navigation>