<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">


        <ImageView
            android:id="@+id/product_image_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/item_photo"
            tools:src="@tools:sample/avatars" />

        <RelativeLayout
            android:id="@+id/item_reletivelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/product_image_view">

            <TextView
                android:id="@+id/product_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="IRONMAN Avatar Pack of 5 Silver badge Edition" />


            <RelativeLayout
                android:id="@+id/placeholder_relative_layout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_name_text_view">

                <TextView
                    android:id="@+id/rupee_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/rupee_symbol"
                    android:textColor="@android:color/holo_red_dark" />

                <TextView
                    android:id="@+id/price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/rupee_symbol"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="20sp"
                    tools:text="545" />

                <TextView
                    android:id="@+id/original_price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/price_text_view"
                    tools:text="₹600" />

            </RelativeLayout>

            <TextView
                android:id="@+id/qty_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/placeholder_relative_layout2"
                tools:text="QTY : 7" />

            <TextView
                android:id="@+id/save_amount_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/qty_text_view"
                tools:text="Save ₹55 (15%)" />

            <TextView
                android:id="@+id/delivery_time_approximate_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/save_amount_text_view"
                tools:text="@string/get_it_by_thursday_march_18" />


        </RelativeLayout>


    </RelativeLayout>
</layout>